2020-07-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/drawtest.c: Use structured error handling and report all
	output to stderr so it does not screw up TAP tests.

	* magick/render.c (DTOLONG_MIN): Correct 32-bit definition of
	DTOLONG_MIN.

	* wand/wandtests.tap: Wand drawtest requires FreeType.

	* NEWS.txt: Update with changes up to 2020-07-26.

	* VisualMagick/magick/magick_config.h.in (HasGS): Default HasGS to
	enabled.

	* configure.ac: Add a --without-gs configure option to disable
	reading PS, EPS, and PDF formats via an external Ghostscript
	delegate program.  This is indended as an absolute security
	measure for sites that want to be assured to avoid executing
	Ghostscript even though it is installed on the system.  Removal of
	PS and PDF reading support breaks reading other formats which are
	handled by executing an external program to first convert to PS or
	PDF formats.

	* magick/delegate.c (InvokePostscriptDelegate): Use HasGS to
	enable use of the Ghostscript delegate.  Change the existing
	legacy HasGS ifdefs to HasGSLIB.

2020-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Fix compilation error when
	COMPRESSION_WEBP is not defined.

2020-07-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix enableval syntax for
	--disable-compressed-files.

2020-07-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (CompareImageCommand): Merge changeset by
	谢致邦 (XIE Zhibang) which adds 'matte' support to the compare
	command. However, substantially reduce the amount of changes
	by avoiding adding a new public function.  Documentation
	regarding how 'compare' uses this option is also added.

	* magick/command.c: Merge changeset by谢致邦 (XIE Zhibang)
	regarding Some duplicate "verbose" should be "version".

	* configure.ac, magick/blob.c: Merge changeset by Przemysław
	Sobala regarding "Configure: add --with(out)-compressed-files