@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020200726"
-#define public MagickPackageReleaseDate "snapshot-20200726"
+#define public MagickPackageVersionAddendum ".020200808"
+#define public MagickPackageReleaseDate "snapshot-20200808"
