@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2020-08-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/magick.c (MagickCondSignal): Re-implement to handle the
+case where a new-style 'siginfo' signal handler was previously
+registered, as well as the legacy type.  This may address oss-fuzz
+24690 &quot;Use-of-uninitialized-value in MagickCondSignal&quot;.</li>
+</ul>
+</blockquote>
 <p>2020-07-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
