@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="generator" content="Docutils 0.15.2: http://docutils.sourceforge.net/" />
+<meta name="generator" content="Docutils 0.12: http://docutils.sourceforge.net/" />
 <title>UNIX/Cygwin/MinGW/MSYS2 Compilation</title>
 <link rel="stylesheet" href="docutils-articles.css" type="text/css" />
 </head>
@@ -911,14 +911,15 @@ pre-compiled components.  Using the pre-compiled packages, it is
 almost as easy to compile GraphicsMagick under MSYS2 as it is under
 Linux!</p>
 <p>When using MSYS2, requesting to install these packages using 'pacman
--S' (in addition to compilation tools for C/C++) should result in
-getting up to speed very quicky with a featureful build:</p>
-<p>mingw-w64-x86_64-bzip2, mingw-w64-x86_64-freetype,
-mingw-w64-x86_64-ghostscript, mingw-w64-x86_64-jbigkit,
-mingw-w64-x86_64-lcms2, mingw-w64-x86_64-libjpeg-turbo,
-mingw-w64-x86_64-libpng, mingw-w64-x86_64-libtool,
-mingw-w64-x86_64-libwebp mingw-w64-x86_64-libwmf,
-mingw-w64-x86_64-libxml2, mingw-w64-x86_64-zlib</p>
+-S' should result in getting up to speed very quicky with a featureful
+build:</p>
+<p>mingw-w64-x86_64-toolchain, mingw-w64-x86_64-bzip2,
+mingw-w64-x86_64-freetype, mingw-w64-x86_64-ghostscript,
+mingw-w64-x86_64-jbigkit, mingw-w64-x86_64-lcms2,
+mingw-w64-x86_64-libjpeg-turbo, mingw-w64-x86_64-libpng,
+mingw-w64-x86_64-libtool, mingw-w64-x86_64-libwebp
+mingw-w64-x86_64-libwmf, mingw-w64-x86_64-libxml2,
+mingw-w64-x86_64-zlib</p>
 <p>GraphicsMagick may also be built using the free MinGW
 (&quot;Minimalistic GNU for Windows&quot;) package, available from</p>
 <blockquote>
